# claude-conversation-analyzer

./: .env.example  .gitignore  CLAUDE.md  PROJECT_SUMMARY.md  README.md  USAGE.md  analyzer_config.example.yaml  check_models.py  claude_conversation_analyzer.py  pyproject.toml  pytest.ini  requirements.txt  test_analyzer.py
src/: __init__.py  claude_md_parser.py  conversation_scanner.py  cost_estimator.py  metrics_collector.py  pattern_mapping.py  processing_tracker.py
src/analyzers/: __init__.py  llm_analyzer.py
src/detectors/: __init__.py  pattern_detectors.py
src/generators/: __init__.py  dashboard.py  modern_dashboard.py  report_generator.py
tests/: __init__.py  conftest.py  test_cost_estimator.py  test_llm_analyzer.py  test_pattern_detectors.py
